--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ whatthepatch = "^1.0.6"
 binaryornot = "^0.4.4"
 cachetools = "^5.5.2"
 charset-normalizer = "^3.4.1"
-pydantic = "^2.11.3"
+pydantic = ">=2.10.4"
 
 
 
